MDEV-13245 Add struct AUTHID